写文档时看着不好的随手改。